@@ -13,6 +13,7 @@ ECHO = @$(ECHO0)
 
 UNICODE_VERSION = 8.0.0
 
+RUBY_PROGRAM_VERSION = $(MAJOR).$(MINOR).$(TEENY)
 RUBY_RELEASE_DATE = $(RUBY_RELEASE_YEAR)-$(RUBY_RELEASE_MONTH)-$(RUBY_RELEASE_DAY)
 RUBYLIB       = $(PATH_SEPARATOR)
 RUBYOPT       = -
