@@ -1,4 +1,12 @@
-#define RUBY_VERSION "2.4.0"
+#define RUBY_PROGRAM_VERSION_MAJOR RUBY_API_VERSION_MAJOR
+#define RUBY_PROGRAM_VERSION_MINOR RUBY_API_VERSION_MINOR
+#define RUBY_PROGRAM_VERSION_TEENY 0
+
+#define RUBY_BUILD_VERSION_STR_2(v) STRINGIZE(v##_MAJOR)"."STRINGIZE(v##_MINOR)
+#define RUBY_BUILD_VERSION_STR_3(v) RUBY_BUILD_VERSION_STR_2(v)"."STRINGIZE(v##_TEENY)
+
+#define RUBY_PROGRAM_VERSION RUBY_BUILD_VERSION_STR_3(RUBY_PROGRAM_VERSION)
+#define RUBY_VERSION RUBY_PROGRAM_VERSION
 #define RUBY_RELEASE_DATE RUBY_RELEASE_YEAR_STR"-"RUBY_RELEASE_MONTH_STR"-"RUBY_RELEASE_DAY_STR
 #define RUBY_PATCHLEVEL -1
 
@@ -25,11 +33,13 @@
 #define RUBY_RELEASE_DAY_STR STRINGIZE(RUBY_RELEASE_DAY)
 #endif
 
+#define RUBY_LIB_VERSION_2 RUBY_BUILD_VERSION_STR_2(RUBY_API_VERSION)
+#define RUBY_LIB_VERSION_3 RUBY_BUILD_VERSION_STR_3(RUBY_API_VERSION)
 #if !defined RUBY_LIB_VERSION && defined RUBY_LIB_VERSION_STYLE
 # if RUBY_LIB_VERSION_STYLE == 3
-#   define RUBY_LIB_VERSION STRINGIZE(RUBY_API_VERSION_MAJOR)"."STRINGIZE(RUBY_API_VERSION_MINOR)"."STRINGIZE(RUBY_API_VERSION_TEENY)
+#   define RUBY_LIB_VERSION RUBY_LIB_VERSION_3
 # elif RUBY_LIB_VERSION_STYLE == 2
-#   define RUBY_LIB_VERSION STRINGIZE(RUBY_API_VERSION_MAJOR)"."STRINGIZE(RUBY_API_VERSION_MINOR)
+#   define RUBY_LIB_VERSION RUBY_LIB_VERSION_2
 # endif
 #endif
 
