@@ -120,10 +120,9 @@ int main(void) {return (EnumProcesses(NULL,0,NULL) ? 0 : 1);}
 	@$(CPP) -I$(srcdir) -I$(srcdir)/include <<"Creating $(MAKEFILE)" | findstr "=" >>$(MAKEFILE)
 #define RUBY_REVISION 0
 #include "version.h"
-MAJOR = RUBY_API_VERSION_MAJOR
-MINOR = RUBY_API_VERSION_MINOR
-TEENY = RUBY_API_VERSION_TEENY
-RUBY_PROGRAM_VERSION = RUBY_VERSION
+MAJOR = RUBY_PROGRAM_VERSION_MAJOR
+MINOR = RUBY_PROGRAM_VERSION_MINOR
+TEENY = RUBY_PROGRAM_VERSION_TEENY
 MSC_VER = _MSC_VER
 <<
 
